--- a/res/layout/signal_recorder.xml
+++ b/res/layout/signal_recorder.xml
@@ -6,11 +6,10 @@
               android:padding="10dp"
         >
     <Button
-            android:id="@+id/btn"
+            android:id="@+id/recorderStartStopBtn"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="start"
-            android:onClick="btnPressed"
             />
 
     <ScrollView
